# contextd-capture

./: .gitignore  README  test.stp  vfs_read.stp
piga-systrans/plugins/claws-mail/piga_context/src/: Makefile.am  Makefile.in  piga_context.c
piga-systrans/src/: CMakeCache.txt  CMakeLists.txt  abstractrule.cpp  com.piga.contextd.xml  configuration.h  context-common.h  context-editor.pro  context-notify.pro  context.cpp  context.h  contextd.pro  contextd_adaptator.cpp  contextd_adaptator.h  contextd_interface.h  domain.h  libcontext.pro  loop.cpp  loop.h  misc.cpp  misc.h  mrule.cpp  mrule.h  programaction.cpp  programvariable.h  transition.cpp  xml_common.h  xmlsp.cpp  xmlsp.h
piga-systrans/src/.svn/: all-wcprops  entries
piga-systrans/src/.svn/text-base/: CMakeLists.txt.svn-base  abstractrule.h.svn-base  com.piga.contextd.xml.svn-base  configuration.cpp.svn-base  context-common.h.svn-base  context-editor.pro.svn-base  context-notify.pro.svn-base  contextd_interface.cpp.svn-base  contextd_interface.h.svn-base  domain.cpp.svn-base  libcontext.pro.svn-base  misc.cpp.svn-base  misc.h.svn-base  program.cpp.svn-base  program.h.svn-base  programaction.h.svn-base  programvariable.cpp.svn-base  rule.cpp.svn-base  rule.h.svn-base  transition.h.svn-base  trule.cpp.svn-base  trule.h.svn-base  variabletypes.cpp.svn-base  variabletypes.h.svn-base  xml_common.h.svn-base  xmlsp.h.svn-base
piga-systrans/src/.svn/tmp/: CMakeLists.txt.2.tmp  CMakeLists.txt.3.tmp  CMakeLists.txt.tmp  abstractrule.cpp.tmp  abstractrule.h.tmp  configuration.cpp.2.tmp  configuration.cpp.3.tmp  configuration.cpp.4.tmp  configuration.cpp.5.tmp  configuration.cpp.6.tmp  configuration.cpp.7.tmp  configuration.cpp.tmp  configuration.h.2.tmp  configuration.h.3.tmp  configuration.h.tmp  loop.h.tmp  rule.cpp.tmp  xml_common.h.2.tmp  xml_common.h.tmp
piga-systrans/src/context-editor_src/: abstractruleinfodock.cpp  abstractruleinfodock.ui  abstractruletreewidget.h  actiondialog.ui  appdialog.cpp  appdialog.ui  appexportdialog.h  appinfodock.h  appinfodock.ui  browserdock.h  captiondialog.cpp  domaindialog.h  domaindialog.ui  domaininfodock.h  domainloopstreewidget.cpp  domainloopstreewidget.h  domainselectionwidget.cpp  editorconfig.cpp  editordock.cpp  graphicsarrow.h  graphicsarrowprogram.cpp  graphicsdomain.cpp  graphicsdomain.h  graphicspopup.cpp  graphicsview.cpp  gvgraph.cpp  loopdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  messagearea.h  messagearea.ui  mruledialog.h  mruledialog.ui  mruletreewidget.cpp  mruletreewidget.h  mruletreewidget.ui  ruledialog.cpp  ruledialog.h  selectdefaultdomaindialog.cpp  (+12 more)
piga-systrans/src/context-editor_src/.svn/: all-wcprops  entries
piga-systrans/src/context-editor_src/.svn/text-base/: Icons.qrc.svn-base  abstractruledialog.cpp.svn-base  abstractruledialog.h.svn-base  abstractruledialog.ui.svn-base  abstractruleinfodock.h.svn-base  abstractruletreewidget.cpp.svn-base  abstractruletreewidget.ui.svn-base  actiondialog.cpp.svn-base  actiondialog.h.svn-base  appdialog.h.svn-base  appexportdialog.cpp.svn-base  appexportdialog.ui.svn-base  appinfodock.cpp.svn-base  browserdock.cpp.svn-base  browserdock.ui.svn-base  captiondialog.h.svn-base  captiondialog.ui.svn-base  colors.cpp.svn-base  colors.h.svn-base  configurationstack.cpp.svn-base  configurationstack.h.svn-base  domaindialog.cpp.svn-base  domaininfodock.cpp.svn-base  domaininfodock.ui.svn-base  domainloopstreewidget.ui.svn-base  domainselectionwidget.h.svn-base  domainselectionwidget.ui.svn-base  editorconfig.h.svn-base  editordock.h.svn-base  graphicsarrow.cpp.svn-base  graphicsarrowprogram.h.svn-base  graphicspopup.h.svn-base  graphicssvgitem.cpp.svn-base  graphicssvgitem.h.svn-base  graphicsview.h.svn-base  gvgraph.cpp.svn-base  gvgraph.h.svn-base  loopdialog.cpp.svn-base  mainwindow.ui.svn-base  messagearea.cpp.svn-base  (+9 more)
piga-systrans/src/context-editor_src/.svn/tmp/: abstractruledialog.cpp.tmp  mruletreewidget.cpp.tmp  settingsdialog.cpp.tmp  transitioninfodock.cpp.2.tmp  transitioninfodock.cpp.3.tmp  transitioninfodock.cpp.tmp  transitioninfodock.h.tmp
piga-systrans/src/context-editor_src/images/.svn/: all-wcprops  (+1 more)
piga-systrans/src/context-notify_src/: changecontextdialog.cpp  changecontextdialog.h  changecontextdialog.ui  context-notify_en.ts  context-notify_fr.qm  context-notify_fr.ts  contextListener.cpp  contextListener.h  contextlist.cpp  contextlist.h  domainlist.cpp  notify.c  notify.h  notifyosd.ui  notifyprompt.cpp  notifyprompt.h  notifyprompt.ui  updatecontext.cpp  updatecontext.h  updatedomain.cpp  updatedomain.h
piga-systrans/src/context-notify_src/.svn/: all-wcprops  entries
piga-systrans/src/contextd_src/: abstractcontext.cpp  abstractcontext.h  clientscleaner.cpp  clientscleaner.h  config-daemon.h  contextclient.cpp  contextclient.h  contextd.cpp  contextd_adaptator.cpp  contextnotify.h  dbus-context.cpp  dbus-context.h  eventdispatcher.cpp  eventdispatcher.h  kernel-context.cpp  kernel-context.h  kthread.cpp  kthread.h  pigahandler.cpp  pigahandler.h  program.cpp  program.h  promptuser.cpp  promptuser.h  transition.cpp  transition.h  transitionrules.cpp  transitionrules.h  xmlcontext2map.cpp  xmlcontext2map.h
piga-systrans/src/contextd_src/.svn/: all-wcprops  entries
piga-systrans/src/contextd_src/auditsec_lsm/: auditsec_info.h  kthread.cpp  kthread.h  syscall.c  syscall.h
piga-systrans/src/contextd_src/plugins/: abstractcontextdplugin.cpp  abstractcontextdplugin.h  contextdpluginevent.h  contextdpluginnotifyevent.h  contextdpluginreloadevent.h  contextdpluginrestartevent.cpp  contextdplugintransitiondemandevent.cpp  contextdplugintransitiondemandevent.h
piga-systrans/src/libcontext_src/: context.pc  contextd_communicator.cpp  contextd_communicator.h  dbuscallback.cpp  dbuscallback.h  libcontext.cpp  libcontext.h  signal_listener.c
piga-systrans/src/libcontext_src/.svn/: all-wcprops  entries
piga-systrans/src/librecompare_src/: automaton.cpp  automaton.h  byteset.cpp  byteset.h  regexp.cpp  regexp.h  statecontainer.h
piga-systrans/src/librecompare_src/.svn/: all-wcprops  entries
(+512 files in other folders)
